Email notification refactoring